--- a/ConexionDB/ConexionDB/App.config
+++ b/ConexionDB/ConexionDB/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <appSettings>
+    <add key="DataSource" value="(localdb)\MSSQLLocalDB; Initial Catalog = DB_ejercicio1; Integrated Security = True; Connect Timeout = 30; Encrypt = False; TrustServerCertificate = False; ApplicationIntent = ReadWrite; MultiSubnetFailover = False"/>
+  </appSettings>
 </configuration>
