--- a/ConexionDB/ConexionDB/ConexionDB.csproj
+++ b/ConexionDB/ConexionDB/ConexionDB.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Dapper.cs" />
     <Compile Include="ExtensionString.cs" />
+    <Compile Include="ISqlQuery.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="SqlQuery.cs" />
     <Compile Include="Program.cs" />
